fourthTier: DFG shouldn't allocate in the GC heap https://bugs.webkit.org/show_bug.cgi?id=115598

Reviewed by Geoffrey Garen.

I believe that we've now fixed this, and this patch just adds the relevant assertion.

* runtime/JSCellInlines.h:
(JSC::JSCell::JSCell):

Canonical link: https://commits.webkit.org/136932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153148 268f45cc-cd09-0410-ab3c-d52691b4dbfc